<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="clickHandler"
            type="com.example.attendancetracker.ClickHandler" />

        <variable
            name="loginModel"
            type="com.example.attendancetracker.models.LoginModel" />

    </data>

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:text="@{loginModel.email}" />

            <TextView
                android:id="@+id/login_email_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_password_warning"
                android:visibility="@{TextUtils.isEmpty(loginModel.email )?  View.GONE : View.VISIBLE}" />

            <EditText
                android:id="@+id/loginActivity_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/login_password_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_password_warning"
                android:visibility="@{TextUtils.isEmpty(loginModel.password) || loginModel.wordLength > 8?  View.GONE : View.VISIBLE}" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginActivity_btn_login"
                android:onClick="@{clickHandler::onButtonClick}"/>

            <TextView
                android:id="@+id/txt_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="auto"
                android:onClick="@{clickHandler::onButtonClick}"
                android:text="@string/loginActivity_TxtBtn_signUp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txt_error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/login_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</layout>

